--- a/src/main/resources/templates/update-supplier.html
+++ b/src/main/resources/templates/update-supplier.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Reference Bootstrap files -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -9,17 +10,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Add Supplier</title>
+    <title>Update Supplier</title>
 </head>
 <body>
 <div style="margin-top: 50px;"
      class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
-    <form th:action="@{supplier}" method="post">
+    <form th:action="@{{id}(id=${supplier.id})}" method="post">
         <input type="hidden" th:field="${supplier.id}">
-        <input type="text" th:field="${supplier.name}" placeholder="Name" class="form-control mb-4 col-4"><br>
         <input type="text" th:field="${supplier.phone}" placeholder="Phone" class="form-control mb-4 col-4"><br>
-        <input type="text" th:field="*{supplier.email}" placeholder="Email" class="form-control mb-4 col-4"><br>
-        <button type="submit" class="btn btn-info col-2">Save</button>
+        <button type="submit" class="btn btn-info col-2">Update</button>
     </form>
     <a th:href="@{/suppliers/list}">Back to List</a>
 </div>
