adding workflows build

--- a/src/main/resources/templates/list-products.html
+++ b/src/main/resources/templates/list-products.html
@@ -32,9 +32,9 @@
           <td th:text="${p.name}"></td>
           <td th:text="${p.price}"></td>
           <td th:text="${p.supplier.id}"></td>
-          <td>
-              <a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPPLIER')" th:href="@{product/update(id=${p.id})}" class="btn btn-primary btn-sm">Update</a>
-              <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{remove(id=${p.id})}" class="btn btn-danger btn-sm"
+          <td sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPPLIER')">
+              <a th:href="@{product/update(id=${p.id})}" class="btn btn-primary btn-sm">Update</a>
+              <a class="btn btn-danger btn-sm" th:href="@{remove(id=${p.id})}"
                  onclick="if(!confirm('Are you sure to delete?')) return false">Delete</a>
           </td>
       </tr>
