--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Something went wrong! </h1>
-<p th:text="${error}">Error Info</p>
+<p th:text="${message}">Error Info</p>
 <p th:text="${status}">Status</p>
 <a href="/home">Go Home</a>
 </body>
