--- a/src/main/resources/templates/add-supplier.html
+++ b/src/main/resources/templates/add-supplier.html
@@ -16,9 +16,9 @@
      class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
     <form th:action="@{supplier}" method="post">
         <input type="hidden" th:field="${supplier.id}">
-        <input type="text" th:field="${supplier.name}" placeholder="Name" class="form-control mb-4 col-4"><br>
-        <input type="text" th:field="${supplier.phone}" placeholder="Phone" class="form-control mb-4 col-4"><br>
-        <input type="text" th:field="*{supplier.email}" placeholder="Email" class="form-control mb-4 col-4"><br>
+        <input type="text" th:field="${supplier.name}" placeholder="Name" class="form-control mb-4 col-4" required><br>
+        <input type="text" th:field="${supplier.phone}" placeholder="Phone" class="form-control mb-4 col-4" required><br>
+        <input type="text" th:field="*{supplier.email}" placeholder="Email" class="form-control mb-4 col-4" required><br>
         <button type="submit" class="btn btn-info col-2">Save</button>
     </form>
     <a th:href="@{/suppliers/list}">Back to List</a>
